fixing migration for foreign key
